# hpp-template-corba

./: .git-blame-ignore-revs  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac  default.nix  flake.nix  package.xml  pyproject.toml  shared.mk
.github/workflows/: nix.yml  update-flake-lock.yml
doc/: CMakeLists.txt  Doxyfile.extra.in  footer.html
idl/: Makefile.am
idl/hpp/corbaserver/: Makefile.am
idl/hpp/hrp2/: Makefile.am  hrp2.idl
include/: CMakeLists.txt  Makefile.am
include/hpp/: hrp2.hh
include/hpp/corba/: doc.hh  server.hh  server.hxx
include/hpp/corba/template/: debug.hh.in  doc.hh  server.hh  server.hxx
include/hpp/corbaserver/: fwd.hh  server.hh
include/hpp/hrp2/: config.hh.in  doc.hh  fwd.hh  server.hh
src/: Makefile.am  hrp2-server.cc  hrp2.impl.cc  hrp2.impl.hh  server-private.cc  server-private.hh  server.cc
tests/: CMakeLists.txt  echo.cc
