<?xml version="1.0"?>
<package format="3">
  <name>hpp-template-corba</name>
  <version>8.0.0</version>
  <description>Template corba server </description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <author>Joseph Mirabel</author>
  <author>Florent Lamiraux et al.</author>

  <license>BSD-2</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-template-corba</url>
  <url type="repository">https://github.com/humanoid-path-planner/hpp-template-corba</url>
  <url type="bugtracker">https://github.com/humanoid-path-planner/hpp-template-corba/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>doxygen</build_depend>

  <depend>hpp-util</depend>
  <depend>omniidl</depend>
  <depend>omniorb</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
