[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-omniorb[build]",
  "cmeel[build]",
  "hpp-util[build]"
]

[project]
dependencies = [
  "cmeel-omniorb",
  "hpp-util"
]
description = "Template corba server"
license = "BSD-2-Clause"
name = "hpp-template-corba"
version = "5.2.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
