include $(top_srcdir)/build-aux/init.mk

# -- Distribute and install headers
nobase_include_HEADERS =			\
	hpp/corba/template/doc.hh		\
	hpp/corba/template/server.hh		\
	hpp/corba/template/server.hxx

debugdir = 					\
	${includedir}/hpp/corba/template
debug_DATA = 					\
	${builddir}/hpp/corba/template/debug.hh
